crates/raster/tests/ui/recur_tile_wrong_state_placement.stderr
error: custom attribute panicked
  --> tests/ui/recur_tile_wrong_state_placement.rs:14:1
   |
14 | #[tile(kind = recur)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: `#[tile(kind = recur)]` only supports `args...` after `output: RecurOutput<S>`
